--- a/investix/css/style.css
+++ b/investix/css/style.css
@@ -1169,10 +1169,19 @@ body {
   width: 290px;
   height: 480px; }
   .account-programs__right--basic {
-    background: url("../img/basic.png") no-repeat top;
+    background: url("../img/basic-price.png") no-repeat top;
     background-size: cover; }
   .account-programs__right--advanced {
-    background: url("../img/advanced.png") no-repeat center;
+    background: url("../img/advanced-price.png") no-repeat center;
+    background-size: cover; }
+  .account-programs__right--expert {
+    background: url("../img/expert-price.png") no-repeat center;
+    background-size: cover; }
+  .account-programs__right--pro {
+    background: url("../img/pro-price.png") no-repeat center;
+    background-size: cover; }
+  .account-programs__right--ultimate {
+    background: url("../img/ultimate-price.png") no-repeat center;
     background-size: cover; }
 
 .account-programs__text {
