--- a/investix/sass/blocks/account-programs.scss
+++ b/investix/sass/blocks/account-programs.scss
@@ -57,12 +57,27 @@
   height: 480px;
   
   &--basic {
-    background: url('../img/basic.png') no-repeat top;
+    background: url('../img/basic-price.png') no-repeat top;
     background-size: cover;
   }
   
   &--advanced {
-    background: url('../img/advanced.png') no-repeat center;
+    background: url('../img/advanced-price.png') no-repeat center;
+    background-size: cover;
+  }
+  
+  &--expert {
+    background: url('../img/expert-price.png') no-repeat center;
+    background-size: cover;
+  }
+  
+  &--pro {
+    background: url('../img/pro-price.png') no-repeat center;
+    background-size: cover;
+  }
+  
+  &--ultimate {
+    background: url('../img/ultimate-price.png') no-repeat center;
     background-size: cover;
   }
 }
