--- a/investix/sass/blocks/account-programs.scss
+++ b/investix/sass/blocks/account-programs.scss
@@ -154,6 +154,46 @@
     background: url('../img/analysis.svg') no-repeat top left;
     background-size: 70px;
   }
+  
+  &--learn {
+    background: url('../img/learn.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--risk {
+    background: url('../img/risk.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--session {
+    background: url('../img/session.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--signal {
+    background: url('../img/signal.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--live {
+    background: url('../img/live.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--market {
+    background: url('../img/market.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--fund {
+    background: url('../img/fund.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--bonus {
+    background: url('../img/bonus.svg') no-repeat top left;
+    background-size: 70px;
+  }
 }
 
 @media screen and ($tablet-widths) {
