--- a/investix/sass/blocks/account-programs.scss
+++ b/investix/sass/blocks/account-programs.scss
@@ -180,6 +180,11 @@
     background-size: 70px;
   }
   
+  &--pers {
+    background: url('../img/pers.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
   &--market {
     background: url('../img/market.svg') no-repeat top left;
     background-size: 70px;
