--- a/investix/sass/blocks/account.scss
+++ b/investix/sass/blocks/account.scss
@@ -47,14 +47,12 @@
   // align-items: center;
   justify-content: space-between;
   
-  // &--around {
-  //   justify-content: space-around;
-  //   margin: 40px 0 0 0;
-  // }
+  &--around {
+    justify-content: space-around;
+  }
   
   &--second {
     margin: 20px 0 0 0;
-    justify-content: space-around;
   }
 }
 
@@ -149,6 +147,51 @@
   
   &--analysis {
     background: url('../img/analysis.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--learn {
+    background: url('../img/learn.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--risk {
+    background: url('../img/risk.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--session {
+    background: url('../img/session.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--signal {
+    background: url('../img/signal.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--live {
+    background: url('../img/live.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--pers {
+    background: url('../img/pers.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--market {
+    background: url('../img/market.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--fund {
+    background: url('../img/fund.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--bonus {
+    background: url('../img/bonus.svg') no-repeat top left;
     background-size: 70px;
   }
 }
