--- a/investix/sass/blocks/account.scss
+++ b/investix/sass/blocks/account.scss
@@ -287,6 +287,51 @@
       background-size: 70px;
     }
     
+    &--learn {
+      background: url('../img/learn.svg') no-repeat top;
+      background-size: 70px;
+    }
+    
+    &--risk {
+      background: url('../img/risk.svg') no-repeat top;
+      background-size: 70px;
+    }
+    
+    &--session {
+      background: url('../img/session.svg') no-repeat top;
+      background-size: 70px;
+    }
+    
+    &--signal {
+      background: url('../img/signal.svg') no-repeat top;
+      background-size: 70px;
+    }
+    
+    &--live {
+      background: url('../img/live.svg') no-repeat top;
+      background-size: 70px;
+    }
+    
+    &--pers {
+      background: url('../img/pers.svg') no-repeat top;
+      background-size: 70px;
+    }
+    
+    &--market {
+      background: url('../img/market.svg') no-repeat top;
+      background-size: 70px;
+    }
+    
+    &--fund {
+      background: url('../img/fund.svg') no-repeat top;
+      background-size: 70px;
+    }
+    
+    &--bonus {
+      background: url('../img/bonus.svg') no-repeat top;
+      background-size: 70px;
+    }
+    
     &:last-child {
       margin: 0;
     }
