--- a/investix/css/style.css
+++ b/investix/css/style.css
@@ -1143,6 +1143,33 @@ body {
     .account__box--analysis {
       background: url("../img/analysis.svg") no-repeat top;
       background-size: 70px; }
+    .account__box--learn {
+      background: url("../img/learn.svg") no-repeat top;
+      background-size: 70px; }
+    .account__box--risk {
+      background: url("../img/risk.svg") no-repeat top;
+      background-size: 70px; }
+    .account__box--session {
+      background: url("../img/session.svg") no-repeat top;
+      background-size: 70px; }
+    .account__box--signal {
+      background: url("../img/signal.svg") no-repeat top;
+      background-size: 70px; }
+    .account__box--live {
+      background: url("../img/live.svg") no-repeat top;
+      background-size: 70px; }
+    .account__box--pers {
+      background: url("../img/pers.svg") no-repeat top;
+      background-size: 70px; }
+    .account__box--market {
+      background: url("../img/market.svg") no-repeat top;
+      background-size: 70px; }
+    .account__box--fund {
+      background: url("../img/fund.svg") no-repeat top;
+      background-size: 70px; }
+    .account__box--bonus {
+      background: url("../img/bonus.svg") no-repeat top;
+      background-size: 70px; }
     .account__box:last-child {
       margin: 0; }
   .account__button {
@@ -1200,16 +1227,16 @@ body {
     background: url("../img/basic-price.png") no-repeat top;
     background-size: cover; }
   .account-programs__right--advanced {
-    background: url("../img/advanced-price.png") no-repeat center;
+    background: url("../img/advanced-price.png") no-repeat top;
     background-size: cover; }
   .account-programs__right--expert {
-    background: url("../img/expert-price.png") no-repeat center;
+    background: url("../img/expert-price.png") no-repeat top;
     background-size: cover; }
   .account-programs__right--pro {
-    background: url("../img/pro-price.png") no-repeat center;
+    background: url("../img/pro-price.png") no-repeat top;
     background-size: cover; }
   .account-programs__right--ultimate {
-    background: url("../img/ultimate-price.png") no-repeat center;
+    background: url("../img/ultimate-price.png") no-repeat top;
     background-size: cover; }
 
 .account-programs__text {
@@ -1231,8 +1258,17 @@ body {
   margin: 20px 0 0 0; }
 
 .account-programs__edge {
-  padding: 60px 0;
-  background: linear-gradient(-123deg, #f2f2f2 0%, #e0f7f9 52%, #cefbff 100%); }
+  padding: 60px 0; }
+  .account-programs__edge--basic {
+    background: linear-gradient(-123deg, #eeeeee 0%, #f3f3f3 53%, #f7f7f7 100%); }
+  .account-programs__edge--advanced {
+    background: linear-gradient(-123deg, #c3f9cf 0%, #dcfce3 36%, #f4fff7 100%); }
+  .account-programs__edge--expert {
+    background: linear-gradient(-123deg, #d7e6ff 0%, #e6eefa 58%, whitesmoke 100%); }
+  .account-programs__edge--pro {
+    background: linear-gradient(-123deg, #ffeec2 0%, #faf2dc 54%, whitesmoke 100%); }
+  .account-programs__edge--ultimate {
+    background: linear-gradient(-123deg, #8850c6 0%, #bfa3de 58%, whitesmoke 100%); }
 
 .account-programs__box {
   padding: 80px 0 0 0;
@@ -1364,6 +1400,33 @@ body {
       background-size: 70px; }
     .account-programs__box--analysis {
       background: url("../img/analysis.svg") no-repeat top;
+      background-size: 70px; }
+    .account-programs__box--learn {
+      background: url("../img/learn.svg") no-repeat top;
+      background-size: 70px; }
+    .account-programs__box--risk {
+      background: url("../img/risk.svg") no-repeat top;
+      background-size: 70px; }
+    .account-programs__box--session {
+      background: url("../img/session.svg") no-repeat top;
+      background-size: 70px; }
+    .account-programs__box--signal {
+      background: url("../img/signal.svg") no-repeat top;
+      background-size: 70px; }
+    .account-programs__box--live {
+      background: url("../img/live.svg") no-repeat top;
+      background-size: 70px; }
+    .account-programs__box--pers {
+      background: url("../img/pers.svg") no-repeat top;
+      background-size: 70px; }
+    .account-programs__box--market {
+      background: url("../img/market.svg") no-repeat top;
+      background-size: 70px; }
+    .account-programs__box--fund {
+      background: url("../img/fund.svg") no-repeat top;
+      background-size: 70px; }
+    .account-programs__box--bonus {
+      background: url("../img/bonus.svg") no-repeat top;
       background-size: 70px; }
     .account-programs__box:last-child {
       margin: 0; } }
