--- a/investix/sass/blocks/account.scss
+++ b/investix/sass/blocks/account.scss
@@ -37,6 +37,10 @@
     background: linear-gradient( -123deg, rgb(136,80,198) 0%, rgb(191,163,222) 58%, rgb(245,245,245) 100%);
   }
   
+  &--crypto {
+    background: linear-gradient( -123deg, rgb(213,208,188) 0%, rgb(229,227,217) 54%, rgb(245,245,245) 100%);
+  }
+  
   &:last-child {
     margin: 0 0 90px 0;
   }
@@ -83,6 +87,11 @@
   
   &--ultimate {
     background: url('../img/ultimate-price.png') no-repeat top;
+  }
+  
+  &--crypto {
+    background: url('../img/crypto-price.png') no-repeat top;
+    background-size: contain;
   }
 }
 
@@ -187,6 +196,41 @@
   
   &--bonus {
     background: url('../img/bonus.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--buy {
+    background: url('../img/buy.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--altcoins {
+    background: url('../img/altcoins.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--exch {
+    background: url('../img/exch.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--exch {
+    background: url('../img/exch.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--port {
+    background: url('../img/port.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--behind {
+    background: url('../img/behind.svg') no-repeat top left;
+    background-size: 70px;
+  }
+  
+  &--secret {
+    background: url('../img/secret.svg') no-repeat top left;
     background-size: 70px;
   }
 }
@@ -324,6 +368,41 @@
     
     &--bonus {
       background: url('../img/bonus.svg') no-repeat top;
+      background-size: 70px;
+    }
+    
+    &--buy {
+      background: url('../img/buy.svg') no-repeat top;
+      background-size: 70px;
+    }
+    
+    &--altcoins {
+      background: url('../img/altcoins.svg') no-repeat top;
+      background-size: 70px;
+    }
+    
+    &--exch {
+      background: url('../img/exch.svg') no-repeat top;
+      background-size: 70px;
+    }
+    
+    &--exch {
+      background: url('../img/exch.svg') no-repeat top;
+      background-size: 70px;
+    }
+    
+    &--port {
+      background: url('../img/port.svg') no-repeat top;
+      background-size: 70px;
+    }
+    
+    &--behind {
+      background: url('../img/behind.svg') no-repeat top;
+      background-size: 70px;
+    }
+    
+    &--secret {
+      background: url('../img/secret.svg') no-repeat top;
       background-size: 70px;
     }
     
